# torch-amgx

./: .gitignore  .gitmodules  .readthedocs.yaml  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: wheels.yml
csrc/: amgx_solver.cu  amgx_solver.h  bindings.cpp
docs/source/: api.rst  conf.py  index.rst  installation.rst  usage.rst
scripts/: build_amgx.ps1  build_amgx.sh  tag_wheel.py
tests/: test_config_preconditioner.py  test_smoke.py
torch_amgx/: __init__.py  solver.py
